# journal

./: .gitignore  README.md  changelog.json  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  main.rs
src/components/: EntryEditor.css  EntryEditor.tsx  EntryList.tsx  KeychainErrorModal.tsx  Modal.tsx  Select.tsx  Settings.tsx  TitleBar.css  TitleBar.tsx
src/lib/: createEntry.ts
