[package]
name = "Journal"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4.41"
libsql = "0.3"
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

